; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_set_ns_and_type_ex.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_set_ns_and_type_ex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i8*)* @set_ns_and_type_ex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_ns_and_type_ex(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_4__, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = bitcast %struct.TYPE_4__* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %8, i8 0, i64 8, i1 false)
  %9 = load i32, i32* %4, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @get_type_str(i32 %9, i8* %10, i8* %11, %struct.TYPE_4__* %7)
  %13 = load i32, i32* %4, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @ZSTR_VAL(i32 %15)
  %17 = call i32 @set_xsi_type(i32 %13, i32 %16)
  %18 = call i32 @smart_str_free(%struct.TYPE_4__* %7)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @get_type_str(i32, i8*, i8*, %struct.TYPE_4__*) #2

declare dso_local i32 @set_xsi_type(i32, i32) #2

declare dso_local i32 @ZSTR_VAL(i32) #2

declare dso_local i32 @smart_str_free(%struct.TYPE_4__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
